--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,15 @@
     font-family: Inter, sans-serif;
 }
 
+body {
+    background: #7ddaff;
+    background: linear-gradient(180deg,rgba(125, 218, 255, 1) 0%, rgb(122, 82, 204) 100%);
+    margin: 0;
+    padding: 0;
+    bottom: 0;
+}
+
+
 h1 {
     text-align: center;
     margin-top: 20px;
