--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,11 @@
     font-family: Inter, sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 body {
     background: #7ddaff;
     background: linear-gradient(180deg,rgba(125, 218, 255, 1) 0%, rgb(122, 82, 204) 100%);
@@ -10,9 +15,43 @@ body {
     bottom: 0;
 }
 
-
 h1 {
     text-align: center;
     margin-top: 20px;
     font-size: 3rem;
+}
+
+header {
+
+    position: sticky;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    height: 60px;
+}
+
+nav {
+    height: 100%;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul a {
+    padding-inline: 16px;
+    padding-block: 8px;
+    border-radius: 10px;
+    color: black;
+}
+
+nav ul a:hover {
+    background-color: rgba(200, 200, 200, 0.5);
 }
