--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,8 +50,11 @@ nav ul a {
     padding-block: 8px;
     border-radius: 10px;
     color: black;
+    transition: 0.2s;
 }
 
 nav ul a:hover {
-    background-color: rgba(200, 200, 200, 0.5);
+    background-color: rgba(200, 200, 200, 0.3);
+    padding-inline: 20px;
+    transition: 0.2s;
 }
