--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,7 @@ a {
 body {
     background: #7ddaff;
     background: linear-gradient(180deg,rgba(125, 218, 255, 1) 0%, rgb(122, 82, 204) 100%);
+    background-size: 100%;
     margin: 0;
     padding: 0;
     bottom: 0;
@@ -55,6 +56,6 @@ nav ul a {
 
 nav ul a:hover {
     background-color: rgba(200, 200, 200, 0.3);
-    padding-inline: 20px;
+    padding-inline: 20;
     transition: 0.2s;
 }
