--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,8 +8,9 @@ a {
 }
 
 body {
-    background: #7ddaff;
-    background: linear-gradient(180deg, rgba(125, 218, 255, 1) 0%, rgb(122, 82, 204) 100%);
+    /* background: #7ddaff; */
+    background: #343341;
+    /* background: linear-gradient(180deg, rgba(125, 218, 255, 1) 0%, rgb(122, 82, 204) 100%); */
     background-size: 100%;
     margin: 0;
     padding: 0;
